syntax = "proto3";
option java_multiple_files = true;
option java_package="com.AirPollutionTrackingApp.CheckRealTimeAirQuality";
import "commons/common.proto";

message checkRealTimeAirQualityResponse{
  double aqi=1;
  string description=2;
  status stat=3;
  components components=4;

}